rebuild StorageGUI